[project]
name = "meal_outpost_agent"
version = "0.1.0"
description = "Meal Outpost Lead Qualification Agent"
authors = [
    { name = "Your Name" }, 
]
requires-python = ">=3.11.0,<3.13"
dependencies = [
    "langgraph>=0.6.2",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "pydantic==2.11.3",
    "langchain>=0.3.27",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "langgraph-sdk>=0.1.0",
    "aiohttp>=3.8.0",
    "mcp>=1.0.0",
]

[tool.setuptools]
packages = ["tools_agent", "tools_agent.meal_outpost", "tools_agent.utils"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.3.6",
    "ruff>=0.8.4",
]